@@ -1,3 +1,11 @@
+2024-07-07  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/internal/SEXP_Iterator.h: Avoid using VECTOR_PTR
+	* inst/include/Rcpp/vector/Subsetter.h: Avoid using STRING_PTR
+	* inst/include/RcppCommon.h: Include compatibility defines
+	* src/barrier.cpp: Avoid using {STRING/VECTOR}_PTR
+	* inst/include/Rcpp/r/compat.h: Include compatibility defines
+
 2024-06-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version
